--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Fitness</title>
+	<title>Афродита</title>
 </head>
 
 <body>
 	<div class="wrapper intro">
 		<div class="intro__block">
 			<div class="intro__logo">
-				<img src="images/logo_intro.png" alt="Лого Воркадиум">
+				<img src="images/logo_intro.png" alt="Афродита Фитнес">
 			</div>
 
 			<a href="main.html" class="intro__link">Перейти на сайт</a>
