--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Fitness | Услуги</title>
+	<title>Афродита | Услуги</title>
 </head>
 
 <body>
@@ -14,20 +14,6 @@
 		<header class="header">
 			<div class="container">
 				<a href="main.html" class="logo">Афродита</a>
-
-				<nav class="menu">
-					<ul class="menu__list">
-						<li class="menu__item">
-							<a href="main.html" class="menu__link menu__link--disp">Главная</a>
-						</li>
-						<li class="menu__item">
-							<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
-						</li>
-						<li class="menu__item active">
-							<a href="services.html" class="menu__link menu__link--service">Услуги</a>
-						</li>
-					</ul>
-				</nav>
 
 				<address class="contacts">
 					<a href="tel:+78000039210" class="contacts__phone">8 (800) 00-392-10</a>
@@ -40,173 +26,212 @@
 			</div><!-- .container -->
 		</header>
 
-		<main class="center">
-			<div class="container container--block">
+		<div class="center">
+			<div class="container">
 
-				<ul class="breadcrumbs">
-					<li class="breadcrumbs__item">
-						<a href="main.html" class="breadcrumbs__link">Главная</a>
-					</li>
-					<li class="breadcrumbs__item">
-						<span class="breadcrumbs__current">Услуги</span>
-					</li>
-				</ul><!-- .breadcrumbs -->
+				<aside class="sidebar">
+					<nav class="menu">
+						<ul class="menu__list">
+							<li class="menu__item">
+								<a href="main.html" class="menu__link menu__link--disp">Главная</a>
+							</li>
+							<li class="menu__item">
+								<a href="comments.html" class="menu__link menu__link--star">Отзывы</a>
+							</li>
+							<li class="menu__item active">
+								<a href="services.html" class="menu__link menu__link--service">Услуги</a>
+							</li>
+						</ul>
+					</nav>
 
-				<section class="services">
-					<h1 class="section-title">Услуги</h1>
+					<section class="partners">
+						<h3 class="partners__title">Партнёры</h3>
 
-					<ul class="services__block">
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service1.jpg" alt="Фитнес">
-								<div class="services__overlay">
-									<h2 class="services__title">фитнес</h2>
-								</div>
-							</div><!-- .services__img -->
+						<ul class="partners__list">
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner3.png" alt="LION">
+								</a>
+							</li>
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner6.png" alt="Атлетика">
+								</a>
+							</li>
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner1.png" alt="Фламинго СПА-салон">
+								</a>
+							</li>
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner2.png" alt="MALIBU">
+								</a>
+							</li>
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner4.png" alt="ARNI спортивный клуб">
+								</a>
+							</li>
+							<li class="partners__item">
+								<a href="#" class="partners__link">
+									<img src="images/partner5.png" alt="Гриф магазин">
+								</a>
+							</li>
+						</ul><!-- .partners__list -->
+					</section><!-- .partners -->
 
-							<h4 class="services__head">Фитнес</h4>
-							<p class="services__text">
-								Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00.
-								Работают
-								24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры,
-								здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в
-								сжатые
-								сроки.
-							</p>
+					<div class="social">
+						<h3 class="social__title">Наши социальные сети</h3>
+
+						<ul class="social__list">
+							<li class="social__item">
+								<a href="#" class="social__link social__link--vk"></a>
+							</li>
+							<li class="social__item">
+								<a href="#" class="social__link social__link--fb"></a>
+							</li>
+							<li class="social__item">
+								<a href="#" class="social__link social__link--gplus"></a>
+							</li>
+							<li class="social__item">
+								<a href="#" class="social__link social__link--tw"></a>
+							</li>
+							<li class="social__item">
+								<a href="#" class="social__link social__link--email"></a>
+							</li>
+						</ul>
+					</div><!-- .social -->
+				</aside>
+
+				<main class="content">
+					<ul class="breadcrumbs">
+						<li class="breadcrumbs__item">
+							<a href="main.html" class="breadcrumbs__link">Главная</a>
 						</li>
-
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service2.jpg" alt="Диетолог">
-								<div class="services__overlay">
-									<h2 class="services__title">диетолог</h2>
-								</div>
-							</div><!-- .services__img -->
-
-							<h4 class="services__head">Личный диетолог</h4>
-							<p class="services__text">
-								Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом
-								вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки.
-								Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных
-								витаминов и микроэлементов.
-							</p>
+						<li class="breadcrumbs__item">
+							<span class="breadcrumbs__current">Услуги</span>
 						</li>
+					</ul><!-- .breadcrumbs -->
 
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service3.jpg" alt="Йога">
-								<div class="services__overlay">
-									<h2 class="services__title">йога</h2>
-								</div>
-							</div><!-- .services__img -->
+					<section class="services">
+						<h1 class="section-title">Услуги</h1>
 
-							<h4 class="services__head">Йога</h4>
-							<p class="services__text">
-								Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт
-								для
-								людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более
-								щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
-							</p>
-						</li>
+						<ul class="services__block">
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service1.jpg" alt="Фитнес">
+									<div class="services__overlay">
+										<h2 class="services__title">фитнес</h2>
+									</div>
+								</div><!-- .services__img -->
 
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service4.jpg" alt="Петли ТРХ">
-								<div class="services__overlay">
-									<h2 class="services__title">петли tpx</h2>
-								</div>
-							</div><!-- .services__img -->
+								<h4 class="services__head">Фитнес</h4>
+								<p class="services__text">
+									Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00.
+									Работают
+									24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры,
+									здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в
+									сжатые
+									сроки.
+								</p>
+							</li>
 
-							<h4 class="services__head">Петли ТРХ</h4>
-							<p class="services__text">
-								Новое направление для нашего центра, которое стало одним из самых популярных и востребованных.
-								Программа
-								TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно
-								тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли
-								усиливают
-								ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
-							</p>
-						</li>
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service2.jpg" alt="Диетолог">
+									<div class="services__overlay">
+										<h2 class="services__title">диетолог</h2>
+									</div>
+								</div><!-- .services__img -->
 
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service5.jpg" alt="Кроссфит">
-								<div class="services__overlay">
-									<h2 class="services__title">Кроссфит</h2>
-								</div>
-							</div><!-- .services__img -->
+								<h4 class="services__head">Личный диетолог</h4>
+								<p class="services__text">
+									Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом
+									вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки.
+									Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных
+									витаминов и микроэлементов.
+								</p>
+							</li>
 
-							<h4 class="services__head">Кроссфит</h4>
-							<p class="services__text">
-								Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с
-								гирями,
-								гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом
-								жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и
-								подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими
-								рекомендациями наших сертифицированных тренеров.
-							</p>
-						</li>
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service3.jpg" alt="Йога">
+									<div class="services__overlay">
+										<h2 class="services__title">йога</h2>
+									</div>
+								</div><!-- .services__img -->
 
-						<li class="services__item">
-							<div class="services__img">
-								<img src="images/service6.jpg" alt="Бассейн">
-								<div class="services__overlay">
-									<h2 class="services__title">Бассейн</h2>
-								</div>
-							</div><!-- .services__img -->
+								<h4 class="services__head">Йога</h4>
+								<p class="services__text">
+									Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт
+									для
+									людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более
+									щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
+								</p>
+							</li>
 
-							<h4 class="services__head">Бассейн</h4>
-							<p class="services__text">
-								Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием
-								или
-								аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими
-								успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми
-								(ежедневно
-								с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
-							</p>
-						</li>
-					</ul><!-- .services__block -->
-				</section><!-- .services -->
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service4.jpg" alt="Петли ТРХ">
+									<div class="services__overlay">
+										<h2 class="services__title">петли tpx</h2>
+									</div>
+								</div><!-- .services__img -->
 
-				<section class="partners">
-					<h2 class="section-title">Партнёры</h2>
+								<h4 class="services__head">Петли ТРХ</h4>
+								<p class="services__text">
+									Новое направление для нашего центра, которое стало одним из самых популярных и востребованных.
+									Программа
+									TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно
+									тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли
+									усиливают
+									ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
+								</p>
+							</li>
 
-					<ul class="partners__list">
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner1.png" alt="Фламинго СПА-салон">
-							</a>
-						</li>
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner2.png" alt="MALIBU">
-							</a>
-						</li>
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner3.png" alt="LION">
-							</a>
-						</li>
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner4.png" alt="ARNI спортивный клуб">
-							</a>
-						</li>
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner5.png" alt="Гриф магазин">
-							</a>
-						</li>
-						<li class="partners__item">
-							<a href="#" class="partners__link">
-								<img src="images/partner6.png" alt="Атлетика">
-							</a>
-						</li>
-					</ul><!-- .partners__list -->
-				</section><!-- .partners -->
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service5.jpg" alt="Кроссфит">
+									<div class="services__overlay">
+										<h2 class="services__title">Кроссфит</h2>
+									</div>
+								</div><!-- .services__img -->
 
+								<h4 class="services__head">Кроссфит</h4>
+								<p class="services__text">
+									Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с
+									гирями,
+									гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом
+									жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и
+									подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими
+									рекомендациями наших сертифицированных тренеров.
+								</p>
+							</li>
+
+							<li class="services__item">
+								<div class="services__img">
+									<img src="images/service6.jpg" alt="Бассейн">
+									<div class="services__overlay">
+										<h2 class="services__title">Бассейн</h2>
+									</div>
+								</div><!-- .services__img -->
+
+								<h4 class="services__head">Бассейн</h4>
+								<p class="services__text">
+									Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием
+									или
+									аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими
+									успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми
+									(ежедневно
+									с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
+								</p>
+							</li>
+						</ul><!-- .services__block -->
+					</section><!-- .services -->
+				</main>
 			</div><!-- .container -->
-		</main><!-- .center -->
+		</div><!-- .center -->
 
 		<footer class="footer">
 			<div class="container">
@@ -221,28 +246,6 @@
 				</div><!-- .info -->
 
 				<a href="main.html" class="logo">Афродита</a>
-
-				<div class="social">
-					<h3 class="social__title">Наши социальные сети</h3>
-
-					<ul class="social__list">
-						<li class="social__item">
-							<a href="#" class="social__link social__link--vk"></a>
-						</li>
-						<li class="social__item">
-							<a href="#" class="social__link social__link--fb"></a>
-						</li>
-						<li class="social__item">
-							<a href="#" class="social__link social__link--gplus"></a>
-						</li>
-						<li class="social__item">
-							<a href="#" class="social__link social__link--tw"></a>
-						</li>
-						<li class="social__item">
-							<a href="#" class="social__link social__link--email"></a>
-						</li>
-					</ul>
-				</div><!-- .social -->
 			</div><!-- .container -->
 		</footer>
 	</div><!-- .wrapper -->
