--- a/main.html
+++ b/main.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Афродита | Главная</title>
 </head>
 
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container">
+			<div class="container container--flex">
 				<span class="logo">Афродита</span>
 
 				<address class="contacts">
@@ -31,7 +31,7 @@
 		</header>
 
 		<div class="top">
-			<div class="container">
+			<div class="container container--flex">
 				<aside class="sidebar">
 					<nav class="menu menu--main">
 						<ul class="menu__list">
@@ -48,7 +48,7 @@
 					</nav>
 
 					<div class="features__item">
-						<h3 class="features__title">Особенность</h3>
+						<h3 class="aside-title">Особенность</h3>
 						<h4 class="features__head">Уникальность</h4>
 						<p class="features__subs">
 							Мы делаем все, для Вашего комфорта
@@ -67,9 +67,9 @@
 		</div><!-- .top -->
 
 		<main class="center">
-			<div class="container">
+			<div class="container container--flex">
 				<section class="news">
-					<div class="news__block">
+					<div class="news__block container--flex">
 
 						<aside class="news-top">
 							<h3 class="news-top__title">
@@ -196,7 +196,7 @@
 		</main><!-- .center -->
 
 		<footer class="footer">
-			<div class="container">
+			<div class="container container--flex">
 				<div class="info">
 					<p class="info__text">
 						Сделано с любовью и старанием на курсе «HTML + CSS» в
