--- a/services.html
+++ b/services.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Афродита | Услуги</title>
 </head>
 
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container">
+			<div class="container container--flex">
 				<a href="main.html" class="logo">Афродита</a>
 
 				<address class="contacts">
@@ -27,7 +27,7 @@
 		</header>
 
 		<div class="center">
-			<div class="container">
+			<div class="container container--flex">
 
 				<aside class="sidebar">
 					<nav class="menu">
@@ -45,7 +45,7 @@
 					</nav>
 
 					<section class="partners">
-						<h3 class="partners__title">Партнёры</h3>
+						<h3 class="aside-title">Партнёры</h3>
 
 						<ul class="partners__list">
 							<li class="partners__item">
@@ -234,7 +234,7 @@
 		</div><!-- .center -->
 
 		<footer class="footer">
-			<div class="container">
+			<div class="container container--flex">
 				<div class="info">
 					<p class="info__text">
 						Сделано с любовью и старанием на курсе «HTML + CSS» в
