--- a/comments.html
+++ b/comments.html
@@ -19,7 +19,7 @@
 				<address class="contacts">
 					<a href="tel:+78000039210" class="contacts__phone">8 (800) 00-392-10</a>
 					<div class="contacts__timework">
-						График работы
+						<a href="javascript:void(0);" class="contacts__link">График работы</a>
 						<div class="contacts__popup">
 							<div class="contacts__popup-block">
 								<div class="contacts__popup-days">пн-вс: 09:00-20:00</div>
