--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container container--flex">
+			<div class="container container--flex container--phone">
 				<a href="main.html" class="logo">Афродита</a>
 
 				<address class="contacts">
@@ -32,10 +32,10 @@
 		</header>
 
 		<div class="center">
-			<div class="container container--flex">
+			<div class="container container--flex container--mobile">
 
 				<aside class="sidebar">
-					<nav class="menu">
+					<nav class="menu menu--mobile">
 						<ul class="menu__list">
 							<li class="menu__item">
 								<a href="main.html" class="menu__link menu__link--disp">Главная</a>
@@ -239,7 +239,7 @@
 		</div><!-- .center -->
 
 		<footer class="footer">
-			<div class="container container--flex">
+			<div class="container container--flex container--phone">
 				<div class="info">
 					<p class="info__text">
 						Сделано с любовью и старанием на курсе «HTML + CSS» в
